--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     },
     "dependencies": {
         "@expo/metro-runtime": "~3.1.3",
+        "@expo/vector-icons": "^14.0.0",
         "@expo/webpack-config": "^19.0.1",
+        "@react-navigation/bottom-tabs": "^6.5.11",
         "@react-navigation/native": "^6.1.9",
         "@react-navigation/native-stack": "^6.9.17",
         "crypto-browserify": "^3.12.1",
