--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "react-native-safe-area-context": "4.8.2",
         "react-native-screens": "~3.29.0",
         "react-native-svg": "14.1.0",
+        "react-native-vector-icons": "^10.3.0",
         "react-native-web": "~0.19.6",
         "stream-browserify": "^3.0.0",
         "vm-browserify": "^1.1.2"
@@ -35,6 +36,7 @@
     "devDependencies": {
         "@babel/core": "^7.20.0",
         "@types/react": "~18.2.45",
+        "@types/react-native-vector-icons": "^6.4.18",
         "babel-plugin-module-resolver": "^5.0.2",
         "typescript": "^5.3.0"
     }
