--- a/package.json
+++ b/package.json
@@ -1,44 +1,45 @@
 {
-  "name": "question-capture-app",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "WEB_PORT=5000 expo start --web"
-  },
-  "dependencies": {
-    "@expo/metro-runtime": "~3.1.3",
-    "@expo/vector-icons": "^14.0.0",
-    "@expo/webpack-config": "^19.0.1",
-    "@react-navigation/bottom-tabs": "^6.5.11",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/native-stack": "^6.9.17",
-    "crypto-browserify": "^3.12.1",
-    "expo": "~50.0.0",
-    "expo-camera": "~14.1.3",
-    "expo-image-manipulator": "~11.8.0",
-    "expo-status-bar": "~1.11.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-reanimated": "~3.6.0",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-svg": "14.1.0",
-    "react-native-vector-icons": "^10.3.0",
-    "react-native-web": "~0.19.6",
-    "stream-browserify": "^3.0.0",
-    "vm-browserify": "^1.1.2",
-    "expo-linear-gradient": "~12.7.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "@types/react-native-vector-icons": "^6.4.18",
-    "babel-plugin-module-resolver": "^5.0.2",
-    "typescript": "^5.3.0"
-  }
+    "name": "question-capture-app",
+    "version": "1.0.0",
+    "main": "index.js",
+    "scripts": {
+        "start": "expo start",
+        "android": "expo start --android",
+        "ios": "expo start --ios",
+        "web": "WEB_PORT=5000 expo start --web"
+    },
+    "dependencies": {
+        "@babel/runtime": "^7.28.4",
+        "@expo/metro-runtime": "~3.1.3",
+        "@expo/vector-icons": "^14.0.0",
+        "@expo/webpack-config": "^19.0.1",
+        "@react-navigation/bottom-tabs": "^6.5.11",
+        "@react-navigation/native": "^6.1.9",
+        "@react-navigation/native-stack": "^6.9.17",
+        "crypto-browserify": "^3.12.1",
+        "expo": "~50.0.0",
+        "expo-camera": "~14.1.3",
+        "expo-image-manipulator": "~11.8.0",
+        "expo-linear-gradient": "~12.7.2",
+        "expo-status-bar": "~1.11.0",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-native": "0.73.6",
+        "react-native-gesture-handler": "~2.14.0",
+        "react-native-reanimated": "~3.6.0",
+        "react-native-safe-area-context": "4.8.2",
+        "react-native-screens": "~3.29.0",
+        "react-native-svg": "14.1.0",
+        "react-native-vector-icons": "^10.3.0",
+        "react-native-web": "~0.19.6",
+        "stream-browserify": "^3.0.0",
+        "vm-browserify": "^1.1.2"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.20.0",
+        "@types/react": "~18.2.45",
+        "@types/react-native-vector-icons": "^6.4.18",
+        "babel-plugin-module-resolver": "^5.0.2",
+        "typescript": "^5.3.0"
+    }
 }
